fixed layout design.

--- a/twitter-secretary/src/main/resources/templates/home.html
+++ b/twitter-secretary/src/main/resources/templates/home.html
@@ -24,7 +24,7 @@
 	          If you can't keep up with your followers and timeline, worry no more!
 	        </p>
 	        <p>
-	          <a class="btn btn-lg btn-primary" href="http://projects.spring.io/spring-social/" role="button">About Twitter Secretary &raquo;</a>
+	          <a class="btn btn-lg btn-primary" href="https://github.com/MehmetMelik/spring-social-samples/tree/master/twitter-secretary" role="button">About Twitter Secretary &raquo;</a>
 	        </p>
 	      </div>
 		</div>		
