--- a/twitter-secretary/src/main/resources/templates/layout.html
+++ b/twitter-secretary/src/main/resources/templates/layout.html
@@ -22,47 +22,56 @@
     <link th:href="@{/showcase.css}" rel="stylesheet"/>
 
   </head>
-
   <body>
-
     <div class="container">
-
       <!-- Static navbar -->
-      <nav class="navbar navbar-dark bg-dark">
-        <div class="container-fluid">
+      <nav class="navbar navbar-expand-sm bg-light navbar-light">
           <div class="navbar-header">
-            <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" th:href="@{/}">Twitter Secretary Beta</a>
+            <a class="navbar-brand" th:href="@{/}"><img th:src="@{/social/twitter/canary-logo-256.png}" alt="Logo" style="width:40px;"/>Twitter Secretary Beta</a>
           </div>
-          <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-              <li><a th:href="@{/}">Home</a></li>
-              <li class="dropdown" sec:authorize="isAuthenticated()"><a th:href="@{/connect}">Connections</a></li>
-              <li class="dropdown" sec:authorize="isAuthenticated()">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Twitter <span class="caret"></span></a>
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                  <a class="nav-link" th:href="@{/}">Home</a>
+              </li>
+              <li class="nav-item dropdown" sec:authorize="isAuthenticated()">
+                  <a class="nav-link" th:href="@{/connect}">Connections</a>
+              </li>
+              <li class="nav-item dropdown" sec:authorize="isAuthenticated()">
+                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Twitter <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                	<li><a th:href="@{/connect/twitter}">Connection</a></li>
-					<li social:connected="twitter"><a th:href="@{/twitter}">Twitter Profile</a></li>
-					<li social:connected="twitter"><a th:href="@{/twitter/timeline}">Timeline</a></li>
-					<li social:connected="twitter"><a th:href="@{/twitter/friends}">Friends</a></li>
-					<li social:connected="twitter"><a th:href="@{/twitter/followers}">Followers</a></li>
-					<li social:connected="twitter"><a th:href="@{/twitter/unfollowers}">Unfollowers</a></li>
-					<li social:connected="twitter"><a th:href="@{/twitter/trends}">Trends</a></li>
+                	<li class="nav-item">
+                        <a class="dropdown-item" th:href="@{/connect/twitter}">Connection</a>
+                    </li>
+					<li social:connected="twitter" class="nav-item">
+                        <a class="dropdown-item" th:href="@{/twitter}">Twitter Profile</a>
+                    </li>
+					<li social:connected="twitter" class="nav-item">
+                        <a class="dropdown-item" th:href="@{/twitter/timeline}">Timeline</a>
+                    </li>
+					<li social:connected="twitter" class="nav-item">
+                        <a class="dropdown-item" th:href="@{/twitter/friends}">Friends</a>
+                    </li>
+					<li social:connected="twitter" class="nav-item">
+                        <a class="dropdown-item" th:href="@{/twitter/followers}">Followers</a>
+                    </li>
+					<li social:connected="twitter" class="nav-item">
+                        <a class="dropdown-item" th:href="@{/twitter/unfollowers}">Unfollowers</a>
+                    </li>
+					<li social:connected="twitter" class="nav-item">
+                        <a class="dropdown-item" th:href="@{/twitter/trends}">Trends</a>
+                    </li>
                 </ul>
               </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-              <li sec:authorize="!isAuthenticated()"><a th:href="@{/signin}">Sign In</a></li>
-              <li sec:authorize="isAuthenticated()"><a href="javascript:document.logoutForm.submit();">Sign out <span sec:authentication="name">Bob</span></a></li>
+              <li sec:authorize="!isAuthenticated()" class="nav-item">
+                  <a class="nav-link" th:href="@{/signin}">Sign In</a>
+              </li>
+              <li sec:authorize="isAuthenticated()" class="nav-item">
+                  <a class="nav-link" href="javascript:document.logoutForm.submit();">Sign out <span sec:authentication="name">Bob</span></a>
+              </li>
             </ul>
             <form method="POST" th:action="@{/signout}" name="logoutForm"></form>
-          </div><!--/.nav-collapse -->
-        </div><!--/.container-fluid -->
       </nav>
 
 	  <div id="content" layout:fragment="content">
